kubernetes/overlays/dev/patches/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: game-system
spec:
  replicas: 1
