kubernetes/overlays/dev/patches/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: game-system
spec:
  replicas: 1
